# emotech-grpc

./: .gitignore  Cargo.toml  README.md  TASK.md  build.rs  gen.sh
proto/: service.proto
src/: client.rs  main.rs  server.rs
